fix css: ensure pagination "gaps" are styled
# 50-character subject line
#
# 72-character wrapped longer description. This should answer:
#
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# Include a link to the ticket, if any.

--- a/app/assets/stylesheets/hightower/_pagination.scss
+++ b/app/assets/stylesheets/hightower/_pagination.scss
@@ -10,6 +10,7 @@
   > span {
     display: inline; // Remove list-style and block-level defaults
     &.current, 
+    &.gap, 
     > a,
     > span {
       position: relative;
